--- a/config/sync/core.entity_view_display.node.vih_long_cource.default.yml
+++ b/config/sync/core.entity_view_display.node.vih_long_cource.default.yml
@@ -231,7 +231,7 @@ content:
     third_party_settings: {  }
   field_paragraphs:
     weight: 9
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: ''
