--- a/config/sync/user.role.authenticated.yml
+++ b/config/sync/user.role.authenticated.yml
@@ -13,3 +13,4 @@ permissions:
   - 'access shortcuts'
   - 'view media'
   - 'access site-wide contact form'
+  - 'use text format mailchimp_campaign'
