--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "drupal/twig_tweak": "^1.4",
         "drupal/eva": "^1.0@RC",
         "drupal/stage_file_proxy": "^1.0@alpha",
-        "drupal/viewsreference": "^1.0@alpha"
+        "drupal/viewsreference": "^1.0@alpha",
+        "drupal/mailchimp": "^1.3"
     },
     "repositories": {
         "packages.drupal.org": {
