--- a/config/sync/core.entity_form_display.node.page.default.yml
+++ b/config/sync/core.entity_form_display.node.page.default.yml
@@ -5,11 +5,14 @@ dependencies:
   config:
     - field.field.node.page.body
     - field.field.node.page.field_meta_tags
+    - field.field.node.page.field_page_main_image
     - field.field.node.page.field_paragraphs
     - field.field.node.page.panelizer
     - field.field.node.page.scheduled_update
+    - image.style.thumbnail
     - node.type.page
   module:
+    - image
     - inline_entity_form
     - metatag
     - paragraphs
@@ -40,6 +43,18 @@ content:
     type: metatag_firehose
     weight: 7
     settings: {  }
+    third_party_settings: {  }
+  field_page_main_image:
+    type: entity_browser_file
+    weight: 28
+    settings:
+      entity_browser: image_browser
+      field_widget_edit: true
+      field_widget_remove: true
+      view_mode: default
+      preview_image_style: thumbnail
+      open: true
+      selection_mode: selection_append
     third_party_settings: {  }
   field_paragraphs:
     type: entity_reference_paragraphs
