--- a/config/sync/core.entity_view_display.node.page.default.yml
+++ b/config/sync/core.entity_view_display.node.page.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.page.body
     - field.field.node.page.field_meta_tags
+    - field.field.node.page.field_page_main_image
     - field.field.node.page.field_paragraphs
     - field.field.node.page.panelizer
     - field.field.node.page.scheduled_update
@@ -31,32 +32,33 @@ content:
   body:
     label: hidden
     type: text_default
-    weight: 0
+    weight: 1
     settings: {  }
     third_party_settings: {  }
   field_meta_tags:
     type: metatag_empty_formatter
-    weight: 2
+    weight: 3
     label: above
     settings: {  }
     third_party_settings: {  }
   field_paragraphs:
     type: entity_reference_revisions_entity_view
-    weight: 3
+    weight: 4
     label: hidden
     settings:
       view_mode: default
       link: ''
     third_party_settings: {  }
   links:
-    weight: 1
+    weight: 2
     settings: {  }
     third_party_settings: {  }
   workbench_moderation_control:
-    weight: -20
+    weight: 0
     settings: {  }
     third_party_settings: {  }
 hidden:
+  field_page_main_image: true
   langcode: true
   panelizer: true
   scheduled_update: true
