--- a/config/sync/field.field.node.page.field_paragraphs.yml
+++ b/config/sync/field.field.node.page.field_paragraphs.yml
@@ -7,6 +7,7 @@ dependencies:
     - node.type.page
     - paragraphs.paragraphs_type.1_column_action_centered
     - paragraphs.paragraphs_type.class_packages
+    - paragraphs.paragraphs_type.event_list
     - paragraphs.paragraphs_type.list_of_news_teasers
     - paragraphs.paragraphs_type.news_list
     - paragraphs.paragraphs_type.page_content
@@ -33,8 +34,12 @@ settings:
       video: video
       class_packages: class_packages
       news_list: news_list
+      event_list: event_list
       page_content: page_content
     target_bundles_drag_drop:
+      vih_teacher_class_description:
+        weight: -27
+        enabled: false
       1_column_action_centered:
         enabled: true
         weight: 2
@@ -53,12 +58,15 @@ settings:
       vih_course_slot:
         weight: 15
         enabled: false
-      page_content:
+      event_list:
         enabled: true
-        weight: 16
+        weight: 15
       vih_option:
         weight: 16
         enabled: false
+      page_content:
+        enabled: true
+        weight: 16
       vih_option_group:
         weight: 17
         enabled: false
@@ -70,8 +78,5 @@ settings:
         enabled: false
       vih_ordered_option:
         weight: 20
-        enabled: false
-      vih_teacher_class_description:
-        weight: -27
         enabled: false
 field_type: entity_reference_revisions
