--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "drupal/eva": "^1.0@RC",
         "drupal/stage_file_proxy": "^1.0@alpha",
         "drupal/viewsreference": "^1.0@alpha",
-        "drupal/mailchimp": "^1.3"
+        "drupal/mailchimp": "^1.3",
+        "drupal/search_api": "^1.3"
     },
     "repositories": {
         "packages.drupal.org": {
