Config export of long / short course paragraphs

--- a/config/sync/core.entity_form_display.paragraph.event_list.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.event_list.default.yml
@@ -21,6 +21,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: viewsreference_autocomplete
+    region: content
 hidden:
   created: true
   status: true
