--- a/config/sync/core.entity_view_display.paragraph.long_course_list_.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.long_course_list_.default.yml
@@ -1,18 +1,18 @@
-uuid: ed3bfdd6-9b28-4688-b1b0-887691396f29
+uuid: ab6d701f-26fc-4224-be09-2fe9ad7f5554
 langcode: da
 status: true
 dependencies:
   config:
-    - field.field.paragraph.event_list.field_event_list
-    - paragraphs.paragraphs_type.event_list
+    - field.field.paragraph.long_course_list_.field_long_course
+    - paragraphs.paragraphs_type.long_course_list_
   module:
     - viewsreference
-id: paragraph.event_list.default
+id: paragraph.long_course_list_.default
 targetEntityType: paragraph
-bundle: event_list
+bundle: long_course_list_
 mode: default
 content:
-  field_event_list:
+  field_long_course:
     weight: 0
     label: above
     settings:
