--- a/config/sync/field.field.node.page.field_paragraphs.yml
+++ b/config/sync/field.field.node.page.field_paragraphs.yml
@@ -9,8 +9,10 @@ dependencies:
     - paragraphs.paragraphs_type.class_packages
     - paragraphs.paragraphs_type.event_list
     - paragraphs.paragraphs_type.list_of_news_teasers
+    - paragraphs.paragraphs_type.long_course_list_
     - paragraphs.paragraphs_type.news_list
     - paragraphs.paragraphs_type.page_content
+    - paragraphs.paragraphs_type.short_course_list_
     - paragraphs.paragraphs_type.video
   module:
     - entity_reference_revisions
@@ -36,6 +38,8 @@ settings:
       news_list: news_list
       event_list: event_list
       page_content: page_content
+      short_course_list_: short_course_list_
+      long_course_list_: long_course_list_
     target_bundles_drag_drop:
       vih_teacher_class_description:
         weight: -27
@@ -55,12 +59,12 @@ settings:
       news_list:
         enabled: true
         weight: 14
-      vih_course_slot:
-        weight: 15
-        enabled: false
       event_list:
         enabled: true
         weight: 15
+      vih_course_slot:
+        weight: 15
+        enabled: false
       vih_option:
         weight: 16
         enabled: false
@@ -70,6 +74,9 @@ settings:
       vih_option_group:
         weight: 17
         enabled: false
+      short_course_list_:
+        enabled: true
+        weight: 17
       vih_ordered_course_period:
         weight: 18
         enabled: false
@@ -79,4 +86,7 @@ settings:
       vih_ordered_option:
         weight: 20
         enabled: false
+      long_course_list_:
+        enabled: true
+        weight: 22
 field_type: entity_reference_revisions
