--- a/config/sync/views.view.vih_search.yml
+++ b/config/sync/views.view.vih_search.yml
@@ -374,7 +374,7 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
-      path: sog
+      path: soeg
     cache_metadata:
       max-age: -1
       contexts:
