--- a/config/sync/block.block.contactblock.yml
+++ b/config/sync/block.block.contactblock.yml
@@ -11,7 +11,7 @@ dependencies:
     - site
 id: contactblock
 theme: site
-region: '-1'
+region: drawer_left
 weight: -1
 provider: null
 plugin: contact_block
