--- a/config/sync/block.block.logo_overlay.yml
+++ b/config/sync/block.block.logo_overlay.yml
@@ -9,7 +9,7 @@ dependencies:
     - site
 id: logo_overlay
 theme: site
-region: '-1'
+region: drawer_left
 weight: -10
 provider: null
 plugin: block_foobarblk
