--- a/config/sync/block.block.popup_cta.yml
+++ b/config/sync/block.block.popup_cta.yml
@@ -8,7 +8,7 @@ dependencies:
     - site
 id: popup_cta
 theme: site
-region: '-1'
+region: drawer_left
 weight: -8
 provider: null
 plugin: popup_cta
