--- a/config/sync/block.block.site_account_menu.yml
+++ b/config/sync/block.block.site_account_menu.yml
@@ -12,7 +12,7 @@ _core:
   default_config_hash: R2K_qX0ZUMbUL6ie_-S9tZVjvqmlWKlscikgeRv9vhw
 id: site_account_menu
 theme: site
-region: '-1'
+region: drawer_left
 weight: -2
 provider: null
 plugin: 'system_menu_block:account'
