--- a/config/sync/block.block.site_help.yml
+++ b/config/sync/block.block.site_help.yml
@@ -10,7 +10,7 @@ _core:
   default_config_hash: MhtNdV__HKRTab0ZPjkPNfYL4Ng4UPBucDLoC7Rg5Eo
 id: site_help
 theme: site
-region: '-1'
+region: drawer_left
 weight: -11
 provider: null
 plugin: help_block
