--- a/config/sync/block.block.site_page_title.yml
+++ b/config/sync/block.block.site_page_title.yml
@@ -8,7 +8,7 @@ _core:
   default_config_hash: 1TQP4b3ZnlzvIH9bj6cpCz_SyUHdJjLQkZnHpikjjhw
 id: site_page_title
 theme: site
-region: '-1'
+region: drawer_left
 weight: -9
 provider: null
 plugin: page_title_block
