--- a/config/sync/block.block.views_block__vih_teacher_teaches_classes_block_1.yml
+++ b/config/sync/block.block.views_block__vih_teacher_teaches_classes_block_1.yml
@@ -11,7 +11,7 @@ dependencies:
     - site
 id: views_block__vih_teacher_teaches_classes_block_1
 theme: site
-region: '-1'
+region: drawer_left
 weight: -4
 provider: null
 plugin: 'views_block:vih_teacher_teaches_classes-block_1'
