--- a/config/sync/core.entity_view_display.node.vih_short_course.default.yml
+++ b/config/sync/core.entity_view_display.node.vih_short_course.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.vih_short_course.body
     - field.field.node.vih_short_course.field_paragraphs
+    - field.field.node.vih_short_course.field_vih_course_periods
     - field.field.node.vih_short_course.field_vih_cs_contact_person
     - field.field.node.vih_short_course.field_vih_sc_image
     - field.field.node.vih_short_course.field_vih_sc_option_groups
@@ -33,6 +34,7 @@ content:
     weight: 101
     settings: {  }
     third_party_settings: {  }
+    region: content
   field_paragraphs:
     weight: 106
     label: hidden
@@ -41,6 +43,15 @@ content:
       link: ''
     third_party_settings: {  }
     type: entity_reference_revisions_entity_view
+    region: content
+  field_vih_course_periods:
+    weight: 107
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_vih_cs_contact_person:
     weight: 104
     label: hidden
@@ -49,6 +60,7 @@ content:
       link: false
     third_party_settings: {  }
     type: entity_reference_entity_view
+    region: content
   field_vih_sc_image:
     weight: 105
     label: above
@@ -57,6 +69,7 @@ content:
       image_link: ''
     third_party_settings: {  }
     type: image
+    region: content
   field_vih_sc_option_groups:
     type: entity_reference_revisions_entity_view
     weight: 103
@@ -65,6 +78,7 @@ content:
       view_mode: default
       link: ''
     third_party_settings: {  }
+    region: content
   field_vih_sc_price:
     weight: 102
     label: hidden
@@ -75,9 +89,11 @@ content:
       prefix_suffix: true
     third_party_settings: {  }
     type: number_decimal
+    region: content
   links:
     weight: 100
     settings: {  }
     third_party_settings: {  }
+    region: content
 hidden:
   langcode: true
