--- a/docroot/themes/custom/site/site.libraries.yml
+++ b/docroot/themes/custom/site/site.libraries.yml
@@ -8,12 +8,12 @@ styling:
   css:
     theme:
       dist/css/stylesheet.css: {}
-      
-
+      dist/jasny-bootstrap/css/jasny-bootstrap.min.css: {}
 
 scripts:
   js:
     dist/js/core.js: {}
+    dist/jasny-bootstrap/js/jasny-bootstrap.min.js: {}
     http://127.0.0.1:35729/livereload.js: { type: external }
   dependencies:
     - core/drupal
