--- a/config/sync/core.entity_view_display.node.vih_short_course.default.yml
+++ b/config/sync/core.entity_view_display.node.vih_short_course.default.yml
@@ -83,17 +83,17 @@ content:
     weight: 102
     label: hidden
     settings:
-      thousand_separator: ''
+      thousand_separator: .
       decimal_separator: .
-      scale: 2
+      scale: 0
       prefix_suffix: true
     third_party_settings: {  }
     type: number_decimal
     region: content
   links:
     weight: 100
+    region: content
     settings: {  }
     third_party_settings: {  }
-    region: content
 hidden:
   langcode: true
