--- a/config/sync/core.entity_view_display.node.vih_long_cource.default.yml
+++ b/config/sync/core.entity_view_display.node.vih_long_cource.default.yml
@@ -4,6 +4,8 @@ status: true
 dependencies:
   config:
     - field.field.node.vih_long_cource.body
+    - field.field.node.vih_long_cource.field_course_heading
+    - field.field.node.vih_long_cource.field_course_subheading
     - field.field.node.vih_long_cource.field_paragraphs
     - field.field.node.vih_long_cource.field_vih_cource_contact_person
     - field.field.node.vih_long_cource.field_vih_course_image
@@ -226,28 +228,45 @@ content:
   body:
     label: hidden
     type: text_default
-    weight: 2
+    weight: 4
     settings: {  }
     third_party_settings: {  }
+    region: content
+  field_course_heading:
+    weight: 1
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: text_default
+    region: content
+  field_course_subheading:
+    weight: 2
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: text_default
+    region: content
   field_paragraphs:
-    weight: 9
+    weight: 10
     label: hidden
     settings:
       view_mode: default
       link: ''
     third_party_settings: {  }
     type: entity_reference_revisions_entity_view
+    region: content
   field_vih_cource_contact_person:
-    weight: 6
+    weight: 8
     label: hidden
     settings:
       view_mode: compact
       link: false
     third_party_settings: {  }
     type: entity_reference_entity_view
+    region: content
   field_vih_course_image:
     type: image
-    weight: 8
+    weight: 9
     label: above
     settings:
       image_style: ''
@@ -255,7 +274,7 @@ content:
     third_party_settings: {  }
     region: content
   field_vih_course_periods:
-    weight: 2
+    weight: 3
     label: above
     settings:
       link: false
@@ -263,34 +282,34 @@ content:
     type: entity_reference_label
     region: content
   field_vih_course_price:
-    weight: 4
+    weight: 5
     label: hidden
     settings:
-      thousand_separator: .
+      thousand_separator: ''
       decimal_separator: .
-      scale: 0
+      scale: 2
       prefix_suffix: true
     third_party_settings: {  }
     type: number_decimal
     region: content
   field_vih_course_subsc_price:
-    weight: 5
+    weight: 6
     label: hidden
     settings:
-      thousand_separator: .
+      thousand_separator: ''
       decimal_separator: .
-      scale: 0
+      scale: 2
       prefix_suffix: true
     third_party_settings: {  }
     type: number_decimal
     region: content
   field_vih_course_week_price:
-    weight: 6
+    weight: 7
     label: hidden
     settings:
-      thousand_separator: .
+      thousand_separator: ''
       decimal_separator: .
-      scale: 0
+      scale: 2
       prefix_suffix: true
     third_party_settings: {  }
     type: number_decimal
