--- a/config/sync/core.entity_form_display.paragraph.file.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.file.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - entity_browser.browser.image_browser
     - field.field.paragraph.file.field_background_color
     - field.field.paragraph.file.field_background_image
+    - field.field.paragraph.file.field_heading
     - field.field.paragraph.file.field_paragraph_file
     - paragraphs.paragraphs_type.file
   module:
@@ -18,13 +19,13 @@ bundle: file
 mode: default
 content:
   field_background_color:
-    weight: 1
+    weight: 2
     settings: {  }
     third_party_settings: {  }
     type: options_select
   field_background_image:
     type: entity_browser_file
-    weight: 0
+    weight: 1
     settings:
       entity_browser: image_browser
       field_widget_edit: true
@@ -34,8 +35,15 @@ content:
       open: true
       selection_mode: selection_append
     third_party_settings: {  }
+  field_heading:
+    weight: 0
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
   field_paragraph_file:
-    weight: 2
+    weight: 3
     settings:
       progress_indicator: throbber
     third_party_settings: {  }
