--- a/config/sync/core.entity_view_display.paragraph.file.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.file.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.paragraph.file.field_background_color
     - field.field.paragraph.file.field_background_image
+    - field.field.paragraph.file.field_heading
     - field.field.paragraph.file.field_paragraph_file
     - paragraphs.paragraphs_type.file
   module:
@@ -14,9 +15,16 @@ targetEntityType: paragraph
 bundle: file
 mode: default
 content:
-  field_paragraph_file:
+  field_heading:
     weight: 0
-    label: above
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+  field_paragraph_file:
+    weight: 1
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     type: file_default
