--- a/config/sync/core.entity_view_display.taxonomy_term.vih_class_package.default.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.vih_class_package.default.yml
@@ -3,6 +3,8 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.taxonomy_term.vih_class_package.field_class_package_paragraph
+    - field.field.taxonomy_term.vih_class_package.field_link_taxo
     - field.field.taxonomy_term.vih_class_package.field_vih_class_package_color
     - field.field.taxonomy_term.vih_class_package.field_vih_cp_description
     - field.field.taxonomy_term.vih_class_package.field_vih_cp_image
@@ -10,6 +12,8 @@ dependencies:
     - field.field.taxonomy_term.vih_class_package.field_vih_show_on_frontpage
     - taxonomy.vocabulary.vih_class_package
   module:
+    - entity_reference_revisions
+    - link
     - panelizer
 third_party_settings:
   panelizer:
@@ -21,7 +25,28 @@ id: taxonomy_term.vih_class_package.default
 targetEntityType: taxonomy_term
 bundle: vih_class_package
 mode: default
-content: {  }
+content:
+  field_class_package_paragraph:
+    type: entity_reference_revisions_entity_view
+    weight: -4
+    label: above
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    region: content
+  field_link_taxo:
+    weight: -3
+    label: above
+    settings:
+      trim_length: 80
+      url_only: false
+      url_plain: false
+      rel: ''
+      target: ''
+    third_party_settings: {  }
+    type: link
+    region: content
 hidden:
   description: true
   field_vih_class_package_color: true
