--- a/config/sync/core.entity_form_display.node.event.default.yml
+++ b/config/sync/core.entity_form_display.node.event.default.yml
@@ -5,13 +5,16 @@ dependencies:
   config:
     - entity_browser.browser.image_browser
     - field.field.node.event.body
+    - field.field.node.event.field_event_paragraph
     - field.field.node.event.field_image
+    - field.field.node.event.field_page_main_image
     - field.field.node.event.field_vih_cp_end_date
     - field.field.node.event.field_vih_cp_start_date
     - node.type.event
   module:
     - datetime
     - entity_browser
+    - paragraphs
     - path
     - text
     - workbench_moderation
@@ -28,11 +31,25 @@ content:
       summary_rows: 3
       placeholder: ''
     third_party_settings: {  }
+    region: content
   created:
     type: datetime_timestamp
     weight: 10
     settings: {  }
     third_party_settings: {  }
+    region: content
+  field_event_paragraph:
+    type: entity_reference_paragraphs
+    weight: 36
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+    third_party_settings: {  }
+    region: content
   field_image:
     type: entity_browser_file
     weight: 32
@@ -45,38 +62,58 @@ content:
       open: true
       selection_mode: selection_append
     third_party_settings: {  }
+    region: content
+  field_page_main_image:
+    type: entity_browser_file
+    weight: 35
+    settings:
+      entity_browser: image_browser
+      field_widget_edit: true
+      field_widget_remove: true
+      view_mode: default
+      preview_image_style: thumbnail
+      open: true
+      selection_mode: selection_append
+    third_party_settings: {  }
+    region: content
   field_vih_cp_end_date:
     weight: 34
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
+    region: content
   field_vih_cp_start_date:
     weight: 33
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
+    region: content
   langcode:
     type: language_select
     weight: 2
     settings: {  }
     third_party_settings: {  }
+    region: content
   path:
     type: path
     weight: 30
     settings: {  }
     third_party_settings: {  }
+    region: content
   promote:
     type: boolean_checkbox
     settings:
       display_label: true
     weight: 15
     third_party_settings: {  }
+    region: content
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
     weight: 16
     third_party_settings: {  }
+    region: content
   title:
     type: string_textfield
     weight: -5
@@ -84,6 +121,7 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+    region: content
   uid:
     type: entity_reference_autocomplete
     weight: 5
@@ -92,4 +130,5 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+    region: content
 hidden: {  }
