--- a/config/sync/core.entity_form_display.taxonomy_term.vih_class_package.default.yml
+++ b/config/sync/core.entity_form_display.taxonomy_term.vih_class_package.default.yml
@@ -4,6 +4,8 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.image_browser
+    - field.field.taxonomy_term.vih_class_package.field_class_package_paragraph
+    - field.field.taxonomy_term.vih_class_package.field_link_taxo
     - field.field.taxonomy_term.vih_class_package.field_vih_class_package_color
     - field.field.taxonomy_term.vih_class_package.field_vih_cp_description
     - field.field.taxonomy_term.vih_class_package.field_vih_cp_image
@@ -12,6 +14,8 @@ dependencies:
     - taxonomy.vocabulary.vih_class_package
   module:
     - entity_browser
+    - link
+    - paragraphs
     - path
     - text
 id: taxonomy_term.vih_class_package.default
@@ -20,21 +24,41 @@ bundle: vih_class_package
 mode: default
 content:
   description:
-    type: text_textfield
-    weight: 0
+    type: text_textarea
+    weight: 1
     settings:
-      size: 60
       placeholder: ''
+      rows: 5
     third_party_settings: {  }
     region: content
+  field_class_package_paragraph:
+    type: entity_reference_paragraphs
+    weight: 10
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+    third_party_settings: {  }
+    region: content
+  field_link_taxo:
+    weight: 2
+    settings:
+      placeholder_url: ''
+      placeholder_title: ''
+    third_party_settings: {  }
+    type: link_default
+    region: content
   field_vih_class_package_color:
-    weight: 36
+    weight: 9
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_vih_cp_description:
-    weight: 32
+    weight: 6
     settings:
       rows: 5
       placeholder: ''
@@ -43,7 +67,7 @@ content:
     region: content
   field_vih_cp_image:
     type: entity_browser_file
-    weight: 33
+    weight: 7
     settings:
       entity_browser: image_browser
       field_widget_edit: true
@@ -55,7 +79,7 @@ content:
     third_party_settings: {  }
     region: content
   field_vih_cp_subtitle:
-    weight: 31
+    weight: 5
     settings:
       size: 60
       placeholder: ''
@@ -63,7 +87,7 @@ content:
     type: string_textfield
     region: content
   field_vih_show_on_frontpage:
-    weight: 35
+    weight: 8
     settings:
       display_label: true
     third_party_settings: {  }
@@ -71,13 +95,13 @@ content:
     region: content
   langcode:
     type: language_select
-    weight: 2
+    weight: 3
     settings: {  }
     third_party_settings: {  }
     region: content
   name:
     type: string_textfield
-    weight: -5
+    weight: 0
     settings:
       size: 60
       placeholder: ''
@@ -85,7 +109,7 @@ content:
     region: content
   path:
     type: path
-    weight: 30
+    weight: 4
     settings: {  }
     third_party_settings: {  }
     region: content
