--- a/config/sync/core.entity_view_display.node.event.default.yml
+++ b/config/sync/core.entity_view_display.node.event.default.yml
@@ -4,12 +4,15 @@ status: true
 dependencies:
   config:
     - field.field.node.event.body
+    - field.field.node.event.field_event_paragraph
     - field.field.node.event.field_image
+    - field.field.node.event.field_page_main_image
     - field.field.node.event.field_vih_cp_end_date
     - field.field.node.event.field_vih_cp_start_date
     - node.type.event
   module:
     - datetime
+    - entity_reference_revisions
     - image
     - panelizer
     - text
@@ -31,6 +34,16 @@ content:
     weight: 3
     settings: {  }
     third_party_settings: {  }
+    region: content
+  field_event_paragraph:
+    type: entity_reference_revisions_entity_view
+    weight: 6
+    label: above
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    region: content
   field_image:
     weight: 0
     label: above
@@ -39,6 +52,16 @@ content:
       image_link: ''
     third_party_settings: {  }
     type: image
+    region: content
+  field_page_main_image:
+    weight: 5
+    label: above
+    settings:
+      image_style: ''
+      image_link: ''
+    third_party_settings: {  }
+    type: image
+    region: content
   field_vih_cp_end_date:
     weight: 2
     label: above
@@ -47,6 +70,7 @@ content:
       timezone_override: ''
     third_party_settings: {  }
     type: datetime_default
+    region: content
   field_vih_cp_start_date:
     weight: 1
     label: above
@@ -55,9 +79,11 @@ content:
       timezone_override: ''
     third_party_settings: {  }
     type: datetime_default
+    region: content
   links:
     weight: 4
     settings: {  }
     third_party_settings: {  }
+    region: content
 hidden:
   langcode: true
