--- a/config/sync/core.entity_view_display.node.news.default.yml
+++ b/config/sync/core.entity_view_display.node.news.default.yml
@@ -5,9 +5,12 @@ dependencies:
   config:
     - field.field.node.news.body
     - field.field.node.news.field_image
+    - field.field.node.news.field_news_paragraph
     - field.field.node.news.field_news_tags
+    - field.field.node.news.field_page_main_image
     - node.type.news
   module:
+    - entity_reference_revisions
     - image
     - text
     - user
@@ -22,6 +25,7 @@ content:
     weight: 101
     settings: {  }
     third_party_settings: {  }
+    region: content
   field_image:
     weight: 102
     label: above
@@ -30,6 +34,16 @@ content:
       image_link: ''
     third_party_settings: {  }
     type: image
+    region: content
+  field_news_paragraph:
+    type: entity_reference_revisions_entity_view
+    weight: 105
+    label: above
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    region: content
   field_news_tags:
     weight: 103
     label: above
@@ -37,7 +51,18 @@ content:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
+    region: content
+  field_page_main_image:
+    weight: 104
+    label: above
+    settings:
+      image_style: ''
+      image_link: ''
+    third_party_settings: {  }
+    type: image
+    region: content
   links:
     weight: 100
+    region: content
 hidden:
   langcode: true
