User page has been done

--- a/config/sync/core.entity_view_display.user.user.default.yml
+++ b/config/sync/core.entity_view_display.user.user.default.yml
@@ -3,21 +3,34 @@ langcode: da
 status: true
 dependencies:
   config:
+    - field.field.user.user.field_relateret
     - field.field.user.user.field_user_birthday
     - field.field.user.user.field_user_name_first
     - field.field.user.user.field_user_name_last
+    - field.field.user.user.field_user_picture
     - field.field.user.user.field_vih_user_descr
     - field.field.user.user.field_vih_user_phone
     - field.field.user.user.field_vih_user_photo
     - field.field.user.user.field_vih_user_title
   module:
+    - image
     - text
     - user
+    - viewsreference
 id: user.user.default
 targetEntityType: user
 bundle: user
 mode: default
 content:
+  field_relateret:
+    weight: 4
+    label: above
+    settings:
+      plugin_types:
+        - block
+    third_party_settings: {  }
+    type: viewsreference_formatter
+    region: content
   field_user_name_first:
     weight: 0
     label: above
@@ -25,6 +38,7 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
   field_user_name_last:
     weight: 1
     label: above
@@ -32,12 +46,23 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
+  field_user_picture:
+    weight: 3
+    label: above
+    settings:
+      image_style: ''
+      image_link: ''
+    third_party_settings: {  }
+    type: image
+    region: content
   field_vih_user_descr:
     weight: 2
     label: above
     settings: {  }
     third_party_settings: {  }
     type: text_default
+    region: content
 hidden:
   field_user_birthday: true
   field_vih_user_phone: true
