--- a/config/sync/core.entity_form_display.user.user.default.yml
+++ b/config/sync/core.entity_form_display.user.user.default.yml
@@ -4,18 +4,19 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.image_browser
+    - field.field.user.user.field_relateret
     - field.field.user.user.field_user_birthday
     - field.field.user.user.field_user_name_first
     - field.field.user.user.field_user_name_last
+    - field.field.user.user.field_user_picture
     - field.field.user.user.field_vih_user_descr
     - field.field.user.user.field_vih_user_phone
     - field.field.user.user.field_vih_user_photo
     - field.field.user.user.field_vih_user_title
   module:
-    - datetime
     - entity_browser
-    - text
     - user
+    - viewsreference
 id: user.user.default
 targetEntityType: user
 bundle: user
@@ -23,48 +24,26 @@ mode: default
 content:
   account:
     weight: 9
+    region: content
     settings: {  }
     third_party_settings: {  }
   contact:
     weight: 10
+    region: content
     settings: {  }
     third_party_settings: {  }
-  field_user_birthday:
-    weight: 2
-    settings: {  }
-    third_party_settings: {  }
-    type: datetime_default
-  field_user_name_first:
-    weight: 0
+  field_relateret:
+    weight: 12
     settings:
-      size: 60
+      match_operator: CONTAINS
+      size: '60'
       placeholder: ''
     third_party_settings: {  }
-    type: string_textfield
-  field_user_name_last:
-    weight: 1
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
-  field_vih_user_descr:
-    weight: 11
-    settings:
-      rows: 5
-      placeholder: ''
-    third_party_settings: {  }
-    type: text_textarea
-  field_vih_user_phone:
-    weight: 3
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
-  field_vih_user_photo:
+    type: viewsreference_autocomplete
+    region: content
+  field_user_picture:
     type: entity_browser_file
-    weight: 8
+    weight: 11
     settings:
       entity_browser: image_browser
       field_widget_edit: true
@@ -74,14 +53,15 @@ content:
       open: true
       selection_mode: selection_append
     third_party_settings: {  }
-  field_vih_user_title:
-    weight: 4
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
+    region: content
 hidden:
+  field_user_birthday: true
+  field_user_name_first: true
+  field_user_name_last: true
+  field_vih_user_descr: true
+  field_vih_user_phone: true
+  field_vih_user_photo: true
+  field_vih_user_title: true
   langcode: true
   language: true
   timezone: true
