--- a/config/sync/core.entity_view_display.node.vih_long_cource.default.yml
+++ b/config/sync/core.entity_view_display.node.vih_long_cource.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.vih_long_cource.body
     - field.field.node.vih_long_cource.field_course_heading
     - field.field.node.vih_long_cource.field_course_subheading
+    - field.field.node.vih_long_cource.field_laere
     - field.field.node.vih_long_cource.field_paragraphs
     - field.field.node.vih_long_cource.field_vih_cource_contact_person
     - field.field.node.vih_long_cource.field_vih_course_image
@@ -245,6 +246,14 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: text_default
+    region: content
+  field_laere:
+    weight: 11
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   field_paragraphs:
     weight: 10
