--- a/config/sync/views.view.kurser_relateret_til_laere.yml
+++ b/config/sync/views.view.kurser_relateret_til_laere.yml
@@ -72,7 +72,6 @@ display:
           grouping: {  }
           row_class: ''
           default_row_class: true
-          uses_fields: false
       row:
         type: fields
         options:
@@ -181,26 +180,33 @@ display:
           entity_type: node
           entity_field: type
           plugin_id: bundle
-      sorts:
-        field_vih_cs_contact_person_target_id:
-          id: field_vih_cs_contact_person_target_id
-          table: node__field_vih_cs_contact_person
-          field: field_vih_cs_contact_person_target_id
-          relationship: none
-          group_type: group
-          admin_label: ''
-          order: ASC
-          exposed: false
-          expose:
-            label: ''
-          plugin_id: standard
+      sorts: {  }
       header: {  }
       footer: {  }
       empty: {  }
-      relationships: {  }
+      relationships:
+        field_vih_cs_contact_person:
+          id: field_vih_cs_contact_person
+          table: node__field_vih_cs_contact_person
+          field: field_vih_cs_contact_person
+          relationship: none
+          group_type: group
+          admin_label: 'field_vih_cs_contact_person: Bruger'
+          required: false
+          plugin_id: standard
+        field_vih_cource_contact_person_1:
+          id: field_vih_cource_contact_person_1
+          table: node__field_vih_cource_contact_person
+          field: field_vih_cource_contact_person
+          relationship: none
+          group_type: group
+          admin_label: 'field_vih_cource_contact_person: Bruger'
+          required: true
+          plugin_id: standard
       arguments: {  }
       display_extenders: {  }
       title: 'Kurser relateret til lære'
+      use_ajax: true
     cache_metadata:
       max-age: -1
       contexts:
