--- a/config/sync/core.entity_view_display.paragraph.file.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.file.default.yml
@@ -22,12 +22,14 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
   field_paragraph_file:
     weight: 1
     label: hidden
     settings: {  }
     third_party_settings: {  }
     type: file_default
+    region: content
 hidden:
   field_background_color: true
   field_background_image: true
